--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -141,16 +141,20 @@ h1{
     float:left;
     width:355px;
 }
-.user-imagen
+.img-user
 {
-    width: 400px;
-    height: 400px;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
+    display: block;
 }
-.image
-{
-    position: relative;
-    float:left;
-    width:400px;
+.option-buttons{
+    text-align: center;
+}
+.pull-right{
 }
 .ofert:hover{
     box-shadow:
